# agr_opdracht2

./: .gitignore  functions.py  main.py  pyproject.toml  readme.MD
.run/: main.run.xml
network/: bc.net
