[tool.poetry]
name = "agr-opdracht2"
version = "0.1.0"
description = ""
authors = ["wilfred11 <wilfredvancasteren@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyagrum = "^2.1.1"
pandas = "^2.3.1"
ipython = "^9.4.0"
scikit-learn = "^1.7.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
